# AI-Course

./: run.txt
week1/day1/: hello_llm.py
week1/day2/: sys_temp.py
week1/day3/: tokens.py
week1/day4/: json_pydentic.py  pyproject.toml
week1/llm_resume_evaluator/: main.py  pyproject.toml  resume_parser.py
week2/day6/: prompt_eng.py
week2/day7_re_act/: main.py  pyproject.toml  react_chain.py
week2/day8_prompt_chainig/: main.py  prompt_chain.py  pyproject.toml
