[project]
name = "llm-resume-evaluator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "document>=1.0",
    "groq>=1.5.0",
    "pdfreader>=0.1.15",
    "pydentic>=0.0.1.dev3",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
]
